# PO_KolkoKrzyzyk_Server

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
PO_KolkoKrzyzyk_Server/: CMakeLists.txt
PO_KolkoKrzyzyk_Server/cfg/: configEXAMPLE.ini
PO_KolkoKrzyzyk_Server/include/: DatabaseClient.h  GameManager.h  GameSessionManager.h  JsonDoc.h  ServerSettings.h  TcpServer.h
PO_KolkoKrzyzyk_Server/src/: DatabaseClient.cpp  GameManager.cpp  GameSessionManager.cpp  JsonDoc.cpp  ServerSettings.cpp  TcpServer.cpp  main.cpp
